--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,48 +2,48 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header {;
+header {
     background-color: #D2C790;
+    max-height: 200px;
 }
 
 .head_elements {
-    margin: 50px;
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
+    margin-left: 120px;
+    margin-right: 120px;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr 1fr;
     align-items: center;
-    justify-content: space-around;
 }
 
 .logo {
-    width: 150px;
-    height: 150px;
+    min-width: 40px;
+    max-width: 150px;
 }
 
 .searchbar {
-    width: 450px;
+    min-width: 550px;
     height: 50px;
 }
 
 .cart_svg {
-    width: 150px;
-    height: 150px;
+    min-width: 40px;
+    max-width: 150px;
 }
 
 .user_svg {
-    width: 150px;
-    height: 150px;
+    min-width: 40px;
+    max-width: 150px;
 }
 
+/* Выпадающий список каталога */
 .dropbtn {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #D9D9D9;
     padding: 16px;
+    min-width: 150px;
     font-size: 16px;
     border: none;
 }
 
-/* Контейнер <div> - необходим для размещения выпадающего содержимого */
 .dropdown {
     position: relative;
     display: inline-block;
@@ -53,9 +53,9 @@ header {;
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #D9D9D9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -68,10 +68,35 @@ header {;
 }
 
 /* Изменение цвета выпадающих ссылок при наведении курсора */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
 
 /* Показать выпадающее меню при наведении курсора */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 /* Изменение цвета фона кнопки раскрывающегося списка при отображении содержимого раскрывающегося списка */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {
+    background-color: #ddd;
+}
+
+.menu {
+    margin-left: 120px;
+    margin-right: 120px;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.different_links {
+    display: block;
+    outline: none;
+}
+
+.different_links > a {
+    text-decoration: none;
+    color: black;
+    padding: 20px 10px;
+}
