--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,14 +2,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-    background-color: #D2C790;
-    max-height: 200px;
+.my_header {
+    background: #D2C790;
 }
 
 .head_elements {
     margin-left: 120px;
-    margin-right: 120px;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr 1fr;
     align-items: center;
@@ -40,8 +38,8 @@ header {
     background-color: #D9D9D9;
     padding: 16px;
     min-width: 150px;
-    font-size: 16px;
     border: none;
+    font-size: 30px;
 }
 
 .dropdown {
@@ -82,9 +80,15 @@ header {
     background-color: #ddd;
 }
 
-.menu {
+.top {
     margin-left: 120px;
     margin-right: 120px;
+    display: flex;
+    flex-flow: column wrap;
+    font-size: 30px;
+}
+
+.menu {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
@@ -95,8 +99,54 @@ header {
     outline: none;
 }
 
-.different_links > a {
+
+.page_name {
+    padding-left: 20px;
+}
+
+footer {
+    background: #D9D9D9;
+    font-size: 30px;
+}
+
+.footer_items {
+    margin: 0px 120px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.info {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    padding-top: 25px;
+}
+
+.info > a {
     text-decoration: none;
     color: black;
-    padding: 20px 10px;
 }
+
+.social_svg {
+    min-width: 40px;
+    max-width: 50px;
+}
+
+.social {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
+
+.payment_svg {
+    min-width: 40px;
+    max-width: 50px;
+}
+
+.payment {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
+
