--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,9 +109,8 @@
 
 
 .page_name {
+    margin-left: 20px;
     font-size: 30px;
-    margin-left: 120px;
-    padding-left: 20px;
 }
 
 footer {
@@ -160,4 +159,27 @@ footer {
     flex-flow: column wrap;
     align-items: center;
 }
+main{
+    margin-left: 120px;
+    margin-right: 120px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
 
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+}
+
+/* Стиль активной/текущей ссылки */
+.pagination a.active {
+    background-color: dodgerblue;
+    color: white;
+}
+
+/* Добавить серый цвет фона при наведении курсора мыши */
+.pagination a:hover:not(.active) {background-color: #ddd;}
