--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,8 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     position: relative;
     width: 100%;
     height: auto;
@@ -305,13 +307,19 @@ li > a {
     display: block;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
+    .middle {
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+        align-items: flex-start;
+    }
     .top {
         display: none;
     }
 
     .logo {
-        max-width: 100px;
+        max-width: 20px;
     }
 
     .payment {
@@ -347,7 +355,29 @@ li > a {
 
     .products-element__img {
         width: 100%;
-        height: 200px;
+        height: 300px;
         object-fit: contain;
     }
+    .searchbar {
+        max-width: 400px;
+        max-height: 20px;
+    }
+
+    .cart_svg {
+        max-width: 20px;
+    }
+
+    .user_svg {
+        max-width: 20px;
+    }
+    .head_elements{
+        margin: 0px 0px 0px 0px;
+        gap: 0px;
+    }
+    .products-element__img {
+        width: 100%;
+        max-height: 200px;
+        object-fit: contain;
+    }
+
 }
