--- a/styles/styles.css
+++ b/styles/styles.css
@@ -315,7 +315,7 @@ nav{
     }
 
     .logo {
-        max-width: 50px;
+        max-height: 45px;
     }
 
     .payment {
@@ -349,11 +349,11 @@ nav{
     }
 
     .cart_svg {
-        max-width: 20px;
+        max-width: 40px;
     }
 
     .user_svg {
-        max-width: 20px;
+        max-width: 40px;
     }
 
     .products-container {
