--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,16 @@ head {
     background: #D2C790;
 }
 
+
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+footer{
+    margin-top: auto;
+}
+
 .my_header {
     background: #D2C790;
 }
@@ -15,6 +25,9 @@ head {
     justify-content: center;
     align-items: center;
     gap: 50px;
+}
+.content{
+    overflow: hidden;
 }
 
 .logo {
@@ -90,8 +103,6 @@ head {
 }
 
 
-
-
 .different_links {
     display: block;
     outline: none;
@@ -117,7 +128,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    flex:0 0 auto;
+    flex: 0 0 auto;
 }
 
 .footer_items {
@@ -161,25 +172,26 @@ footer {
     flex-flow: column wrap;
     align-items: center;
 }
-.menu{
+
+.menu {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
 }
 
-.main-items{
+.main-items {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
     position: relative;
 
 }
-.middle{
+
+.middle {
     display: flex;
     justify-content: center;
 }
-
 
 
 .navigation {
@@ -196,7 +208,8 @@ li > a {
     text-decoration: none;
     color: black;
 }
-nav{
+
+nav {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -205,14 +218,11 @@ nav{
 }
 
 
-
 .products-container {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
 }
-
-
 
 
 .products-element {
@@ -238,12 +248,11 @@ nav{
 }
 
 
-
-
 .products-element__button {
 
 }
-.paginatedItems{
+
+.paginatedItems {
     position: relative;
 }
 
