--- a/styles/styles.css
+++ b/styles/styles.css
@@ -310,7 +310,7 @@ nav {
     height: 30px;
     text-align: center;
     line-height: 30px;
-    background: #f5f5f5;
+    background: #D2C790;
     color: #444;
     cursor: pointer;
     border-radius: 2px;
