--- a/styles/styles.css
+++ b/styles/styles.css
@@ -184,7 +184,6 @@ footer {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    position: relative;
 
 }
 
@@ -328,19 +327,63 @@ nav {
     font-size: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     padding: 25px;
     gap: 25px;
+}
+
+.carousel-item{
+    width:250px;
 }
 
 .d-block{
     object-fit: fill;
     align-self: center;
     justify-self: center;
+    width:80%;
 }
 #carouselExampleIndicators{
     width: 500px;
     height: 450px;
+}
+.cart-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+}
+.cart-products-element{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.cart-products-element > img{
+    height: 200px;
+}
+.cart-prods{
+    width: 100%;
+}
+.plusminus{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.cart-products-info{
+    margin: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.end_buy{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
 }
 
 @media (max-width: 1300px) {
@@ -400,8 +443,8 @@ nav {
 
     .products-container {
         display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
     .searchbar{
         display: none;
