--- a/styles/styles.css
+++ b/styles/styles.css
@@ -352,6 +352,9 @@ nav {
     align-items: flex-start;
     gap: 15px;
 }
+.cart-products{
+    width: 100%;
+}
 .cart-products-element{
     width:100%;
     display: flex;
@@ -364,6 +367,9 @@ nav {
 }
 .cart-prods{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .plusminus{
     width: 100%;
@@ -385,8 +391,19 @@ nav {
     justify-content: center;
 
 }
+#clear{
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
 
 @media (max-width: 1300px) {
+    .back_to_top{
+        width: 50px;
+        height: 50px;
+    }
     .top {
         display: none;
     }
@@ -394,6 +411,8 @@ nav {
     .head_elements{
         justify-content: space-between;
         align-items: center;
+        width: 100%;
+        height: 50px;
     }
     .user_svg{
         display: none;
