--- a/styles/styles.css
+++ b/styles/styles.css
@@ -399,10 +399,13 @@ nav {
     margin-top: 10px;
 }
 
+
 @media (max-width: 1300px) {
     .back_to_top{
+        padding-top: 20px;
         width: 50px;
         height: 50px;
+        font-size: 30px;
     }
     .top {
         display: none;
