--- a/styles/styles.css
+++ b/styles/styles.css
@@ -399,8 +399,140 @@ nav {
     margin-top: 10px;
 }
 
+.burger-check {
+    display: none;
+}
+
+/* burger menu */
+*:before,
+*:after {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    box-sizing: border-box;
+}
+.burger {
+    position: relative;
+    float: left;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.burger:after {
+    position: absolute;
+    bottom: 7px;
+    left: 0px;
+    width: 100%;
+    text-align: center;
+}
+.burger span,
+.burger span:before,
+.burger span:after {
+    position: absolute;
+    left: 10px;
+    top: 22px;
+    width: 40px;
+    height: 6px;
+    background: #333;
+    border-radius: 0.2em;
+}
+.burger span:before,
+.burger span:after {
+    content: '';
+    left: 0;
+}
+
+.burger span:before {
+    top: -8px;
+}
+
+.burger span:after {
+    top: 8px;
+}
+
+
+
+.burger-check:checked + .burger span {
+    height: 0;
+    width: 0;
+}
+
+.burger-check:checked + .burger span:before,
+.burger-check:checked + .burger span:after {
+    top: 6px;
+}
+.burger-check:checked + .burger span:before {
+    -webkit-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    transform: rotate(225deg);
+}
+
+.burger-check:checked + .burger span:after {
+    -webkit-transform: rotate(-225deg);
+    -ms-transform: rotate(225deg);
+    transform: rotate(-225deg);
+}
+span.boo {
+    width: auto;
+    margin-top: 0;
+    line-height: 60px;
+    height: 0;
+    overflow: hidden;
+}
+#main-nav-test:checked ~ .boo {
+    height: 50px;
+}
+
+.a-header {
+    display: none;
+    position: relative;
+    float: left;
+    width: calc(100% - 20px);
+    margin: 0;
+    min-height: 50px;
+    overflow: hidden;
+}
+
+.a-header ul {
+    position: relative;
+    float: left;
+    width: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.a-header ul a {
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 0;
+    line-height: 50px;
+    padding: 0 15px;
+    text-decoration: none;
+    overflow: hidden;
+    text-align: left;
+}
+
+.a-header ul a:hover,
+.a-header ul a:active,
+.a-header ul a:focus,
+.a-header ul a:visited {
+    text-decoration: none;
+    background: #fff;
+    border-bottom-color: #08c;
+}
+
+/* Animate height of 'a' element in order to reveal the menu on check (IE9 or higher) */
+#main-nav:checked ~ ul a {
+    height: 50px;
+}
+
 
 @media (max-width: 1300px) {
+    .a-header{
+        display: block;
+    }
     .back_to_top{
         padding-top: 20px;
         width: 50px;
@@ -415,13 +547,13 @@ nav {
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        height: 50px;
     }
     .user_svg{
         display: none;
     }
 
     .logo {
+        display: none;
         max-height: 45px;
     }
 
