--- a/styles/styles.css
+++ b/styles/styles.css
@@ -549,6 +549,99 @@ font-size: 30px;
     height: 50px;
 }
 
+.chat {
+    z-index: 99;
+    --light-color: #fff;
+    height: 420px;
+    width: 350px;
+    background: var(--light-color);
+    position: fixed;
+    bottom: 50px;
+    right: 10px;
+    box-shadow: 0px 0px 15px 0px black;
+}
+.chat-header {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    padding: 0px 30px;
+    background-color: #D2C790;
+    color: var(--light-color);
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.chat-header .logo {
+    height: 35px;
+    width: 35px;
+    box-shadow: 0px 0px 10px 0px black;
+}
+.chat-header img {
+    height: 100%;
+    width: 100%;
+}
+.chat-header .title {
+    padding-left: 10px;
+}
+.chat-body {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    padding: 8px 10px;
+    align-items: flex-end;
+    overflow-y: auto;
+}
+.chat-input {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #ccc;
+}
+.input-sec {
+    flex: 9;
+}
+.send {
+    flex: 1;
+    padding-right: 4px;
+}
+#txtInput {
+    line-height: 30px;
+    padding: 8px 10px;
+    border: none;
+    outline: none;
+    caret-color: black;
+    font-size: 1rem;
+    width: 100%;
+}
+
+.chatbot-message,
+.user-message {
+    padding: 8px;
+    background: #ccc;
+    margin: 5px;
+    width: max-content;
+    border-radius: 10px 3px 10px 10px;
+}
+.chatbot-message {
+    background: #D2C790;
+    color: var(--light-color);
+    align-self: flex-start;
+    border-radius: 10px 10px 3px 10px;
+}
+
+.chat{
+    display: none;
+}
+
+.openbot{
+    position: fixed;
+    bottom: 200px;
+    right: 40px;
+    z-index: 9999;
+    width: 30px;
+    height: 30px;
+}
 
 @media (max-width: 1300px) {
     .a-header{
@@ -561,6 +654,9 @@ font-size: 30px;
         font-size: 30px;
     }
     .top {
+        display: none;
+    }
+    .chat{
         display: none;
     }
 
@@ -631,5 +727,8 @@ font-size: 30px;
     }
     #carouselExampleIndicators{
         width: 250px
+    }
+    .openbot{
+        display: none;
     }
 }
